src/test/ui/repeat_count.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/repeat_count.rs:5:17
   |
LL |     let n = 1;
   |         - help: consider using `const` instead of `let`
LL |     let a = [0; n];
   |                 ^ non-constant value

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:7:17
   |
LL |     let b = [0; ()];
   |                 ^^ expected `usize`, found `()`

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:10:17
   |
LL |     let c = [0; true];
   |                 ^^^^ expected `usize`, found `bool`

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:13:17
   |
LL |     let d = [0; 0.5];
   |                 ^^^ expected `usize`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:16:17
   |
LL |     let e = [0; "foo"];
   |                 ^^^^^ expected `usize`, found `&str`

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:31:17
   |
LL |     let g = [0; G { g: () }];
   |                 ^^^^^^^^^^^ expected `usize`, found struct `G`

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:19:17
   |
LL |     let f = [0; -4_isize];
   |                 ^^^^^^^^ expected `usize`, found `isize`
   |
   = note: `-4_isize` cannot fit into type `usize`

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:22:23
   |
LL |     let f = [0_usize; -1_isize];
   |                       ^^^^^^^^ expected `usize`, found `isize`
   |
   = note: `-1_isize` cannot fit into type `usize`

error[E0308]: mismatched types
  --> $DIR/repeat_count.rs:25:17
   |
LL |     let f = [0; 4u8];
   |                 ^^^ expected `usize`, found `u8`
   |
help: change the type of the numeric literal from `u8` to `usize`
   |
LL |     let f = [0; 4usize];
   |                 ^^^^^^

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0308, E0435.
For more information about an error, try `rustc --explain E0308`.
